--- a/Keil2GCC.vcproj
+++ b/Keil2GCC.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9,00"
+	Version="9.00"
 	Name="Keil2GCC"
 	ProjectGUID="{A94CAB0E-8882-4378-AB57-7EEDE180FF35}"
 	RootNamespace="Keil2EclipseCL"
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\PersistenceLibrary\Source\BasicTypes;..\PersistenceLibrary\Source\Collections;..\PersistenceLibrary\Source\FileUtils;..\PersistenceLibrary\Source\Graphics;..\PersistenceLibrary\Source\Math;..\PersistenceLibrary\Source\Persistence;..\PersistenceLibrary\Source\Protocols"
+				AdditionalIncludeDirectories="PersistenceLibrary\Source\BasicTypes;PersistenceLibrary\Source\Collections;PersistenceLibrary\Source\FileUtils;PersistenceLibrary\Source\Graphics;PersistenceLibrary\Source\Math;PersistenceLibrary\Source\Persistence;PersistenceLibrary\Source\Protocols"
 				PreprocessorDefinitions="_CRT_SECURE_NO_WARNINGS;WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -63,7 +63,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="BasicTypesD.lib CollectionsD.lib FileUtilsD.lib GraphicsD.lib MathD.lib PersistenceD.lib ProtocolsD.lib"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="..\PersistenceLibrary\IDE\VS9-2008\lib"
+				AdditionalLibraryDirectories="PersistenceLibrary\IDE\VS9-2008\lib"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				TargetMachine="1"
@@ -117,7 +117,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\PersistenceLibrary\Source\BasicTypes;..\PersistenceLibrary\Source\Collections;..\PersistenceLibrary\Source\FileUtils;..\PersistenceLibrary\Source\Graphics;..\PersistenceLibrary\Source\Math;..\PersistenceLibrary\Source\Persistence;..\PersistenceLibrary\Source\Protocols"
+				AdditionalIncludeDirectories="PersistenceLibrary\Source\BasicTypes;PersistenceLibrary\Source\Collections;PersistenceLibrary\Source\FileUtils;PersistenceLibrary\Source\Graphics;PersistenceLibrary\Source\Math;PersistenceLibrary\Source\Persistence;PersistenceLibrary\Source\Protocols"
 				PreprocessorDefinitions="_CRT_SECURE_NO_WARNINGS;WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
@@ -138,7 +138,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="BasicTypes.lib Collections.lib FileUtils.lib Graphics.lib Math.lib Persistence.lib Protocols.lib"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="..\PersistenceLibrary\IDE\VS9-2008\lib"
+				AdditionalLibraryDirectories="PersistenceLibrary\IDE\VS9-2008\lib"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				OptimizeReferences="2"
